# gpu-rodinia

./: CMakeLists.txt  Makefile
common/: hip.make.config  make.config
cuda/: Makefile
cuda/b+tree/: Makefile
cuda/backprop/: Makefile
cuda/bfs/: Makefile
cuda/cfd/: Makefile
cuda/dwt2d/: Makefile
cuda/gaussian/: Makefile
cuda/heartwall/: Makefile
cuda/hotspot/: Makefile
cuda/hotspot3D/: Makefile
cuda/huffman/: Makefile
cuda/kmeans/: Makefile
cuda/lavaMD/: makefile
cuda/leukocyte/CUDA/: Makefile
cuda/lud/cuda/: Makefile
cuda/mummergpu/src/: Makefile  suffix-tree.cpp
cuda/myocyte/: Makefile
cuda/nn/: Makefile
cuda/nw/: Makefile
cuda/particlefilter/: Makefile
cuda/pathfinder/: Makefile
cuda/srad/srad_v1/: makefile
cuda/srad/srad_v2/: Makefile
cuda/streamcluster/: Makefile
hip/: CMakeLists.txt  Makefile
hip/b+tree/: CMakeLists.txt  Makefile  main.c  main.h
hip/b+tree/kernel/: kernel_gpu_cuda_wrapper.cu  kernel_gpu_cuda_wrapper_2.cu
hip/b+tree/util/cuda/: cuda.cu
hip/backprop/: CMakeLists.txt  Makefile  backprop_cuda.cu
hip/bfs/: CMakeLists.txt  Makefile  bfs.cu
hip/cfd/: CMakeLists.txt  Makefile  euler3d.cu  euler3d_double.cu  pre_euler3d.cu  pre_euler3d_double.cu  run
hip/cfd/inc/: README  helper_cuda.h
hip/dwt2d/: CMakeLists.txt  Makefile  README  common.h  components.cu  dwt.cu  main.cu
hip/dwt2d/dwt_cuda/: common.h  fdwt53.cu  fdwt97.cu  rdwt53.cu  rdwt97.cu
hip/gaussian/: CMakeLists.txt  Makefile  gaussian.cu
hip/heartwall/: CMakeLists.txt  Makefile  main.cu
hip/heartwall/AVI/: Makefile
hip/hotspot/: CMakeLists.txt  Makefile  hotspot.cu
hip/hotspot3D/: CMakeLists.txt  Makefile  opt1.cu
hip/huffman/: CMakeLists.txt  Makefile  hist.cu  main_test_cu.cu  scan.cu  vlc_kernel_sm64huff.cu
hip/kmeans/: CMakeLists.txt  Makefile  kmeans_cuda.cu  kmeans_cuda_kernel.cu
hip/lavaMD/: CMakeLists.txt  Makefile
hip/lavaMD/kernel/: kernel_gpu_cuda_wrapper.cu
hip/lavaMD/util/device/: device.cu
hip/leukocyte/: CMakeLists.txt
hip/leukocyte/CUDA/: CMakeLists.txt  find_ellipse_kernel.cu  track_ellipse_kernel.cu
hip/lud/: CMakeLists.txt  Makefile  run
hip/lud/cuda/: CMakeLists.txt  Makefile  lud.cu  lud_kernel.cu
hip/mummergpu/: Makefile  run
hip/mummergpu/src/: CMakeLists.txt  Makefile  PoolMalloc.cpp  PoolMalloc.h  mummergpu.cu  mummergpu_gold.cpp  mummergpu_kernel.cu  suffix-tree.cpp
hip/myocyte/: CMakeLists.txt  Makefile  main.cu  master.cu  work.cu  work_2.cu
hip/nn/: CMakeLists.txt  Makefile  nn_cuda.cu
hip/nw/: CMakeLists.txt  Makefile  needle.cu
hip/particlefilter/: CMakeLists.txt  Makefile  ex_particle_CUDA_naive_seq.cu
hip/pathfinder/: CMakeLists.txt  Makefile  pathfinder.cu
hip/srad/: CMakeLists.txt  Makefile
hip/srad/srad_v1/: CMakeLists.txt  Makefile  main.cu
hip/srad/srad_v2/: CMakeLists.txt  Makefile  run  srad.cu
hip/streamcluster/: CMakeLists.txt  Makefile  streamcluster_cuda.cu  streamcluster_header.cu
opencl/b+tree/: run
opencl/backprop/: Makefile  backprop_ocl.cpp  run
opencl/bfs/: Makefile  run
opencl/cfd/: CLHelper.h  Makefile  run
opencl/hotspot/: run
opencl/kmeans/: cluster.c  kmeans.cpp  kmeans.h  kmeans_clustering.c  run
opencl/nw/: run
opencl/particlefilter/: ex_particle_OCL_single_seq.cpp  run
opencl/pathfinder/: main.cpp
opencl/streamcluster/: Makefile  run
